Safari overflow overlay fixes

--- a/src/components/Graphs/HeroGraph.css
+++ b/src/components/Graphs/HeroGraph.css
@@ -37,6 +37,14 @@
     }
 }
 
+@media not all and (min-resolution:.001dpcm) {
+    @media {
+        .heroBars {
+            overflow: visible;
+        }
+    }
+}
+
 /*block height tooltip*/
 
 .overviewBars .tooltip.total rect {
