--- a/src/components/Graphs/SimpleBarGraph.css
+++ b/src/components/Graphs/SimpleBarGraph.css
@@ -62,6 +62,14 @@
     }
 }
 
+@media not all and (min-resolution:.001dpcm) {
+    @media {
+        .circulateSimpleBars {
+            overflow: visible;
+        }
+    }
+}
+
 .yAxisLabel {
     font-family: Avenir, sans-serif;
     font-size: 14px;
